# oekaki

./: README.md  build-docker.sh  package-lock.json  package.json  production.yml  shell.nix  upload-docker.sh
backend/: .env  Cargo.nix  Cargo.nix.patch  Cargo.toml  Dockerfile.nix  backend.nix  crate-hashes.json  docker-compose.yml  generate.sh
backend/migrations/2020-07-19-070432_oekaki/: down.sql  up.sql
backend/src/: draw.rs  main.rs  operation.rs  path.rs  room.rs  schema.rs
client/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.nix  client.nix  next.config.js  package-lock.json  package.json  tsconfig.json
client/components/: canvas.tsx  rooms.tsx  thumbnail.tsx
client/lib/: drawTracker.tsx  operation.tsx  renderPath.tsx  result.tsx  useOperation.tsx  usePaths.tsx  weaveTraversal.tsx
client/pages/: index.tsx
client/pages/api/: new_room.tsx  rooms.tsx
client/pages/api/rooms/[room_id]/: new_path.tsx  operations.tsx  path.tsx
client/pages/rooms/: [room_id].tsx
components/: canvas.tsx
nix/: sources.json
