[package]
name = "backend"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", default-features = false, features = ["postgres"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
serde = "1.0.114"
