[package]
name = "backend"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }

diesel = { version = "1.4.5", default-features = false, features = ["postgres", "uuid", "serde_json"] }
serde = { version = "1.0.114", features = ["derive"] }
uuid = { version = "0.6.5", features = ["serde"] }
serde_json = "1.0.56"
diesel_migrations = "1.4.0"
